package com.inf5153.api.daos;

import com.inf5153.api.models.Contact;

import org.springframework.stereotype.Service;

@Service
public class ContactDAO extends AbstractDAO<Contact,Integer>{

}
