package com.inf5153.api.daos;

import com.inf5153.api.models.Patient;

import org.springframework.stereotype.Service;

@Service
public class PatientDAO extends AbstractDAO<Patient,Integer>{
    
}
