package com.inf5153.api.daos;

import com.inf5153.api.models.Role;

import org.springframework.stereotype.Service;

@Service
public class RoleDAO extends AbstractDAO<Role,Integer> {
    
}
