package com.inf5153.api.daos;

import com.inf5153.api.models.User;

import org.springframework.stereotype.Service;

@Service
public class UserDAO extends AbstractDAO<User,Integer> {
    
}
