package com.inf5153.api.daos;

import com.inf5153.api.models.Visit;

import org.springframework.stereotype.Service;

@Service
public class VisitDAO extends AbstractDAO<Visit,Integer>{

}
