package com.inf5153.api.models;

public enum Gender {
    Male,
    Female,
    Other
}
